Add category data & move reading to fixed notes

--- a/2020-12-03-my-reading-list.njk
+++ b/2020-12-03-my-reading-list.njk
@@ -14,6 +14,12 @@ noOutdated: true
 I like to read books in **applied maths**, **sciences**, **biography**, **history** and **psychology**. Check [my activities on Goodreads](https://www.goodreads.com/user/show/19630622-thi-dinh) (to-read books, comments, ratings,...) for more information.
 {% endmarkdown %}
 
+{% markdown %}
+::: tip
+If you have any recommendations, please let me know in the comments below.
+:::
+{% endmarkdown %}
+
 <ol id="reading-list" class="indent" reversed>
   {% for item in books %}
     <li class="item">
